--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,4 @@
 #root {
-    border: 1px solid blue;
     padding: 40px;
 }
 .domino {
@@ -31,7 +30,7 @@
         margin-bottom: 50px;
     }
     &__button {
-        background: #00dcb8;
+        min-width: 54px;
         color: #ffffff;
         border: none;
         padding: 15px 20px;
@@ -40,7 +39,14 @@
         box-shadow: 0 0 3px grey;
         margin: 0 5px;
         border-radius: 5px;
+        background: #00dcb8;
 
+        &_left {
+            background: url("../img/rotate-left-icon.png") center no-repeat, #00dcb8;
+        }
+        &_right {
+            background: url("../img/rotate-right-icon.png") center no-repeat, #00dcb8;
+        }
         &:active {
             box-shadow: none;
         }
